--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "name": "next"
       }
     ],
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "types": ["leaflet"]
   },
   "include": [
     "**/.eslintrc.cjs",
