--- a/package.json
+++ b/package.json
@@ -3,37 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "dev": "next dev",
     "lint": "next lint",
-    "migrate": "ley --require tsm"
+    "migrate": "ley --require tsm",
+    "start": "next start"
   },
   "dependencies": {
     "@algolia/autocomplete-js": "^1.12.1",
-    "bcrypt": "^5.1.1",
-    "cloudinary-build-url": "^0.2.4",
-    "csrf": "^3.1.0",
-    "dompurify": "^3.0.6",
-    "dotenv": "^16.3.1",
-    "leaflet": "^1.9.4",
-    "leaflet-control-geocoder": "^2.4.0",
-    "ley": "^0.8.1",
-    "next": "13.5.5",
-    "next-themes": "^0.2.1",
-    "postgres": "^3.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
-    "react-leaflet-cluster": "^2.1.0",
-    "react-select": "^5.8.0",
-    "sass": "^1.69.5",
-    "secure-json-parse": "^2.7.0",
-    "sharp": "^0.32.6",
-    "tsm": "^2.3.0",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/bcrypt": "^5.0.1",
     "@types/dompurify": "^3.0.5",
@@ -42,13 +19,34 @@
     "@types/react": "^18.2.35",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
+    "bcrypt": "^5.1.1",
+    "cloudinary-build-url": "^0.2.4",
+    "csrf": "^3.1.0",
     "daisyui": "^3.9.4",
+    "dompurify": "^3.0.6",
+    "dotenv": "^16.3.1",
     "eslint-config-upleveled": "^6.2.0",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
+    "ley": "^0.8.1",
+    "next": "13.5.5",
+    "next-themes": "^0.2.1",
+    "postgres": "^3.4.3",
     "prettier-plugin-embed": "^0.2.5",
     "prettier-plugin-sql": "^0.15.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
+    "react-select": "^5.8.0",
+    "sass": "^1.69.5",
+    "secure-json-parse": "^2.7.0",
+    "sharp": "^0.32.6",
     "stylelint": "^15.11.0",
     "stylelint-config-upleveled": "^1.0.2",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "tsm": "^2.3.0",
+    "typescript": "^5.2.2",
+    "zod": "^3.22.4"
   }
 }
