--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "final-project",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -19,15 +20,12 @@
     "daisyui": "^3.9.4",
     "dompurify": "^3.0.6",
     "dotenv": "^16.3.1",
-    "eslint-config-upleveled": "^6.2.0",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
     "ley": "^0.8.1",
     "next": "13.5.5",
     "next-themes": "^0.2.1",
     "postgres": "^3.4.3",
-    "prettier-plugin-embed": "^0.2.5",
-    "prettier-plugin-sql": "^0.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
@@ -36,11 +34,8 @@
     "sass": "^1.69.5",
     "secure-json-parse": "^2.7.0",
     "sharp": "^0.32.6",
-    "stylelint": "^15.11.0",
-    "stylelint-config-upleveled": "^1.0.2",
     "tailwindcss": "^3.3.5",
     "tsm": "^2.3.0",
-    "typescript": "^5.2.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -48,6 +43,12 @@
     "@types/dompurify": "^3.0.5",
     "@types/leaflet": "^1.9.7",
     "@types/react": "^18.2.35",
-    "@types/react-dom": "^18.2.14"
+    "@types/react-dom": "^18.2.14",
+    "eslint-config-upleveled": "^7.2.0",
+    "prettier-plugin-embed": "^0.2.5",
+    "prettier-plugin-sql": "^0.15.1",
+    "stylelint": "^15.11.0",
+    "stylelint-config-upleveled": "^1.0.2",
+    "typescript": "^5.2.2"
   }
 }
