--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
     "@types/bcrypt": "^5.0.1",
     "@types/dompurify": "^3.0.5",
     "@types/leaflet": "^1.9.7",
