--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@algolia/autocomplete-js": "^1.12.1",
+    "@mapbox/search-js-react": "1.0.0-beta.18",
     "@tailwindcss/typography": "^0.5.10",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
     "@types/node": "^20.8.10",
     "autoprefixer": "^10.4.16",
     "bcrypt": "^5.1.1",
@@ -20,6 +24,7 @@
     "daisyui": "^3.9.4",
     "dompurify": "^3.0.6",
     "dotenv": "^16.3.1",
+    "jest-environment-jsdom": "^29.7.0",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
     "ley": "^0.8.1",
@@ -38,6 +43,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@playwright/test": "^1.40.0",
     "@types/bcrypt": "^5.0.1",
     "@types/dompurify": "^3.0.5",
