--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.2",
     "@types/node": "^20.8.10",
     "autoprefixer": "^10.4.16",
     "bcrypt": "^5.1.1",
@@ -48,6 +47,7 @@
     "@types/react": "^18.2.35",
     "@types/react-dom": "^18.2.14",
     "eslint-config-upleveled": "^7.2.0",
+    "jest": "^29.7.0",
     "prettier-plugin-embed": "^0.2.5",
     "prettier-plugin-sql": "^0.15.1",
     "stylelint": "^15.11.0",
