--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^6.1.4",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.10",
     "autoprefixer": "^10.4.16",
     "bcrypt": "^5.1.1",
