--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ next-env.d.ts
 playwright/test-results/
 playwright/report/
 /playwright/.cache/
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
