--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PGHOST=localhost
+PGHOST=xxxxxxxxxxxxxxxxxxxxxxxx
 PGUSERNAME=xxxxxxxxxxxxxxxxxxxxxxxx
 PGPASSWORD=xxxxxxxxxxxxxxxxxxxxxxxx
 PGDATABASE=xxxxxxxxxxxxxxxxxxxxxxxx
